objects/zisf__FmcDefaultValue__c.object
<CustomObject>
    <description>default values for find more contacts part.</description>
    <fields>
        <fullName>zisf__Job_function__c</fullName>
        <label>Job function</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zisf__LocationTree__c</fullName>
        <label>LocationTree</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zisf__Location__c</fullName>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Management_Level__c</fullName>
        <label>Management Level</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zisf__job_title__c</fullName>
        <label>job title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>FmcDefaultValue</label>
    <nameField>
        <label>FmcDefaultValue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FmcDefaultValues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>